Added "Two Sum" solution

--- a/LeetCodeProblems-CSharp/LeetCodeProblems-CSharp.csproj
+++ b/LeetCodeProblems-CSharp/LeetCodeProblems-CSharp.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>LeetCodeProblems_CSharp</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Medium\" />
+    <Folder Include="Hard\" />
+  </ItemGroup>
+
 </Project>
